trunk/Archive2/41/976bc03bc12c79/main.cpp
class A
{
private:
~A() = default;
};

int main()
{
A a;
}
